--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ repositories {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.3.5",
+            'com.codeborne:selenide:6.4.0',
             "org.junit.jupiter:junit-jupiter:5.8.2",
-            "org.slf4j:slf4j-simple:1.7.36"
+            "org.slf4j:slf4j-simple:1.7.36"  // logger
     )
 }
 
