--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     testImplementation(
             'com.codeborne:selenide:6.4.0',
+            'com.github.javafaker:javafaker:1.0.2',
             "org.junit.jupiter:junit-jupiter:5.8.2",
             "org.slf4j:slf4j-simple:1.7.36"  // logger
     )
