--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
+    id 'java'
     id 'java-library'
+    id "io.qameta.allure" version "2.9.6"
 }
+
 
 repositories {
     mavenCentral()
@@ -11,10 +14,29 @@ dependencies {
             'com.codeborne:selenide:6.4.0',
             'com.github.javafaker:javafaker:1.0.2',
             "org.junit.jupiter:junit-jupiter:5.8.2",
-            "org.slf4j:slf4j-simple:1.7.36"  // logger
+            "org.slf4j:slf4j-simple:1.7.36",  // logger
+            "io.qameta.allure:allure-selenide:2.17.3",
     )
+}
+
+allure {
+    report {
+        version.set("2.17.3") //версия Allure Report (https://github.com/allure-framework/allure2)
+    }
+    adapter {
+        aspectjWeaver.set(true) // обработка аннотации @Step
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.17.3") //версия Allure JUnit5 (https://github.com/allure-framework/allure-java)
+            }
+        }
+    }
 }
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
