--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ dependencies {
             "org.junit.jupiter:junit-jupiter:5.8.2",
             "org.slf4j:slf4j-simple:1.7.36",  // logger
             "io.qameta.allure:allure-selenide:2.17.3",
+            'org.assertj:assertj-core:3.22.0',
+            'com.codeborne:pdf-test:1.7.0',
+            'com.codeborne:xls-test:1.4.0',
+            'com.opencsv:opencsv:5.6',
+            'com.google.code.gson:gson:2.9.0'
     )
 }
 
