--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,9 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
+# creds
+credentials.properties
+
 # Eclipse Gradle plugin generated files
 # Eclipse Core
 # JDT-specific (Eclipse Java Development Tools)
