--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,8 @@ dependencies {
             'com.codeborne:pdf-test:1.7.0',
             'com.codeborne:xls-test:1.4.0',
             'com.opencsv:opencsv:5.6',
-            'com.google.code.gson:gson:2.9.0'
+            'com.google.code.gson:gson:2.9.0',
+            "org.aeonbits.owner:owner:1.0.12"
     )
 }
 
